@@ -1,3 +1,9 @@
+2007-06-07  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
+	* interfaces/R/src/rinterface.c (R_igraph_layout_fruchterman_reingold)
+	(R_igraph_layout_fruchterman_reingold_3d) : weights argument added	
+
 2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c (R_igraph_write_graph_pajek) : 
