@@ -1,3 +1,8 @@
+2007-06-07  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/layout.c (igraph_layout_fruchterman_reingold)
+	(igraph_layout_fruchterman_reingold_3d) : weight argument added
+
 2007-07-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* interfaces/python/src/graphobject.c
